//
//proto3proto2
//protobuf
//https://www.jianshu.com/p/4443c28d4bf7
syntax = "proto3";

//，protocgo
package go_protos;

option go_package = "./go_protos";

import "txbase.proto";

message TxDepositIn {
	TxBase TxBase = 1;
	bytes  Puk    = 2; //，index=0
}

message TxDepositOut {
	TxBase TxBase = 1;
}